test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 30 Mar 2026 10:26:23 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="ACHwaug1Ea3AR0Ub6GWczak/HGY1bSCQ", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}